rails g devise:install + created HomeController

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <h1><%= link_to 'Deadliner', root_path %></h1>
+  <%= yield %>
 </body>
 </html>
