--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <p>
   <% if current_user %>
     Logged in as <%= current_user.email %>.
+    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
   <% else %>
     <%= link_to "Sign in with Github",
       user_omniauth_authorize_path(:github) %>
