Details page for project added

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
 <%= raw ap(projects.first) %>
 <% projects.each do |project| %>
   <article>
-    <h3><%= project.full_name %></h3>
+    <h3><%= link_to project.full_name, project_path(project.id) %></h3>
     <p>Open tasks: <%= project.task_count %>
   <article>
 <% end %>
