--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,10 @@
 <h2>Project: <%= project.full_name %></h2>
-<%= raw ap deadlines %>
-<%= raw ap(project) %>
+<% deadlines.each do |deadline| %>
+  <h3><%= deadline.title %></h3>
+  <p>State: <%= deadline.state %></p>
+  <p>Is due on <strong><%= deadline.due_on.to_formatted_s(:long) %></strong></p>
+  <p>Which is <strong><%= distance_of_time_in_words_to_now(deadline.due_on) %></strong> from now</p>
+
+  <p>There are <%= deadline.open_issues %> open issues and <%= deadline.closed_issues %> closed issues, so it's <%= deadline.completion_percentage %>% complete.</p>
+  <%= raw ap deadline %>
+<% end %>
