--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,19 @@
 <h2>Projects</h2>
+<table>
+  <thead>
+    <tr>
+      <td>Project</td>
+      <td>Open tasks</td>
+    </tr>
+  </thead>
+  <tbody>
 <% projects.each do |project| %>
-  <article>
-    <h3><%= link_to project.full_name, project_path(project.id) %></h3>
-    <p>Open tasks: <%= project.task_count %>
-  <article>
+  <tr>
+    <td><%= link_to project.full_name, project_path(project.id) %></td>
+    <td><%= project.task_count %></td>
+  </tr>
 <% end %>
+  </tbody>
+</table>
 
 <%= paginate projects %>
