--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
-<h2>Nothing to see here ;)</h2>
+<h2>Current Status</h2>
+<% img_src = [
+  'https://media.giphy.com/media/toXKzaJP3WIgM/giphy.gif',
+  'http://i.imgur.com/rIPBmvV.gif',
+  'http://i.imgur.com/7YNrbUy.gif'
+].sample %>
+<%= image_tag img_src %>
