--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,9 @@
 <% img_src = [
   'https://media.giphy.com/media/toXKzaJP3WIgM/giphy.gif',
   'http://i.imgur.com/rIPBmvV.gif',
-  'http://i.imgur.com/7YNrbUy.gif'
+  'http://i.imgur.com/7YNrbUy.gif',
+  'http://i.imgur.com/DEMUyWC.gif', # hackerman
+  'http://i.imgur.com/vbRHD9E.gif', # house
+  'http://i.imgur.com/RvN7Xic.gif',
 ].sample %>
 <%= image_tag img_src %>
