--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -19,5 +19,25 @@
     </li>
   <% end %>
 </ul>
+<h2>Projects</h2>
+<table>
+  <thead>
+    <tr>
+      <td>Project</td>
+      <td>Open tasks</td>
+    </tr>
+  </thead>
+  <tbody>
+<% projects.each do |project| %>
+  <tr>
+    <td><%= link_to project.full_name, project_path(project.id) %></td>
+    <td><%= project.task_count %></td>
+    <td>
+      <%= link_to "Share", new_dashboard_path(project_identifier: project.full_name) %>
+    </td>
+  </tr>
+<% end %>
+  </tbody>
+</table>
 
 <%= paginate projects %>
