Implement Stelian's html and styling for projects index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,6 @@
 .container {
   width: 800px;
   margin: 0 auto;
-  font-family: Helvetica, sans-serif;
-
 }
 
 a {
@@ -42,4 +40,161 @@ tbody {
 
 td {
   padding: 10px;
+}
+
+$input_mono_narrow_bold: "input_mono_narrow_bold", monospace;
+
+$fonts_url_fallback: 'fonts/';
+
+// $fonts_url: 'http://d2zrsw3u8lkijg.cloudfront.net/fonts/';
+$fonts_url: 'fonts/';
+
+@font-face {
+  font-family: 'input_mono_narrow_bold';
+  src: url($fonts_url + 'InputMonoNarrow-Bold.woff2') format('woff2'),
+       url($fonts_url + 'InputMonoNarrow-Bold.woff') format('woff'),
+       url($fonts_url_fallback + 'InputMonoNarrow-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+html, body, div, p, h1, h2, h3, h4, ul, li, img, input {
+  margin: 0;
+  padding: 0;
+}
+html {
+  -webkit-text-size-adjust: none;
+}
+ul {
+  list-style: none;
+}
+h1, h2, h3, h4 {
+  font-weight: normal;
+}
+
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+.projects-header {
+  padding-top: 80px;
+  text-align: center;
+  width: 520px;
+  margin: 0 auto;
+}
+.projects-avatar {
+  border-radius: 50%;
+  width: 96px;
+  height: 96px;
+}
+.projects-instructions {
+  font-size: 18px;
+  font-weight: bold;
+  color: #81848A;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+.projects {
+  width: 520px;
+  margin: 0 auto;
+  border-top: 1px solid #EDEDED;
+}
+.project {
+  border-bottom: 1px solid #EDEDED;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.project-name {
+  font-size: 24px;
+  font-weight: bold;
+  color: #737F98;
+  line-height: 26px;
+
+  a {
+    color: #5C7FC9;
+    text-decoration: none;
+  }
+}
+.project-description {
+  font-size: 16px;
+  line-height: 26px;
+  color: #758081;
+}
+.project-share {
+  width: 40px;
+  height: 40px;
+  display: block;
+  background: #F2F2F2 url(images/link.svg) no-repeat 50% 50%;
+  border-radius: 50%;
+}
+
+.pagination {
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  width: 520px;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+
+  .first,
+  .last,
+  .prev,
+  .next {
+
+    a {
+      display: block;
+      min-width: 48px;
+      padding: 0 8px;
+      box-sizing: border-box;
+      border: 2px solid #EDEDED;
+      text-decoration: none;
+      color: #737F98;
+      text-align: center;
+      line-height: 42px;
+      margin: 0 4px;
+
+      &:hover {
+        border: 2px solid #B5DEE1;
+      }
+    }
+  }
+  .page {
+
+    a {
+      display: block;
+      min-width: 48px;
+      padding: 0 8px;
+      box-sizing: border-box;
+      border: 2px solid #EDEDED;
+      text-decoration: none;
+      color: #737F98;
+      text-align: center;
+      line-height: 42px;
+      margin: 0 4px;
+
+      &:hover {
+        border: 2px solid #B5DEE1;
+      }
+    }
+  }
+  .current {
+    line-height: 42px;
+    display: block;
+    min-width: 35px;
+    padding: 0 8px;
+    background: #B5DEE1;
+    color: #fff;
+    text-align: center;
+    margin: 0 4px;
+  }
+  .first {
+    margin-left: -4px;
+  }
 }
