--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Deadliner</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
+<%= render 'layouts/head' %>
 <body>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-69838901-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
   <div class="container">
     <h1><%= link_to 'Deadliner', root_path %></h1>
     <p>
@@ -30,14 +15,7 @@
     <% end %>
     </p>
 
-    <% if notice %>
-      <p><strong style='color: blue'><%= notice %></strong></p>
-    <% end %>
-
-    <% if alert %>
-      <p><strong style='color: red'><%= alert %></strong></p>
-    <% end %>
-
+    <%= render 'layouts/flashes' %>
     <%= yield %>
   </div>
 </body>
