--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,7 +130,7 @@ body {
   width: 40px;
   height: 40px;
   display: block;
-  background: #F2F2F2 url(images/link.svg) no-repeat 50% 50%;
+  background: #F2F2F2 image-url('link.svg') no-repeat 50% 50%;
   border-radius: 50%;
 }
 
