--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -33,10 +33,12 @@
     <td><%= link_to project.full_name, project_path(project.id) %></td>
     <td><%= project.task_count %></td>
     <td>
-      <% if dashboard = Dashboard.find_by_project_identifier(project.full_name)  %>
-        <a data-clipboard-text='<%= dashboard_url(link_slug: dashboard.link_slug)%>' id='d_clip_button' title='Click me to copy to clipboard.'>Copy link <a/>
+      <% if project.dashboard  %>
+        <a data-clipboard-text='<%= show_dashboard_url(link_slug: project.dashboard.link_slug)%>' id='d_clip_button' title='Click me to copy to clipboard.'>Copy link <a/>
+        <%= link_to "Edit", edit_dashboard_path(project_identifier: project.full_name) %>
+        <%= link_to "Destroy", dashboard_path(project.dashboard), method: :delete %>
       <% else %>
-          <%= link_to "Share", new_dashboard_path(dashboard) %>
+        <%= link_to "Share", new_dashboard_path(project_identifier: project.full_name) %>
       <% end %>
     </td>
   </tr>
