--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,36 @@
-<h2>Project: <%= project.full_name %></h2>
+<div class="milestones-header">
+  <div class="milestones-project">
+    <img class="milestones-avatar" src="<%= github_user.avatar_url %>" alt="<%= github_user.name %>">
+    <span class="milestones-project-name"><%= project.full_name %></span>
+  </div>
+  <%= link_to "View projects", projects_path, class: "milestones-view-projects" %>
+</div>
+
+<% if deadlines && deadlines.first %>
+  <% featured = deadlines.first %>
+  <div class="milesone-featured-wrapper">
+    <div class="milesone-featured">
+      <h2 class="milesone-featured-name"><%= featured.name %></h2>
+      <div class="milesone-featured-issues"><%= featured.open_issues %> open, <%= featured.closed_issues %> closed</div>
+      <div class="milesone-featured-progress"><%= featured.completion_percentage.round %>%</div>
+      <ul class="milesone-featured-countdown js-countdown-big" data-epoch-seconds="<%= featured.due_on.to_i %>">
+        <li class="milesone-featured-interval">
+          <div class="milesone-featured-number js-countdown-days">00</div>
+          <div class="milesone-featured-label">days</div>
+        </li>
+        <li class="milesone-featured-interval">
+          <div class="milesone-featured-number js-countdown-hours">00</div>
+          <div class="milesone-featured-label">hours</div>
+        </li>
+        <li class="milesone-featured-interval">
+          <div class="milesone-featured-number js-countdown-minutes">00</div>
+          <div class="milesone-featured-label">minutes</div>
+        </li>
+      </ul>
+    </div>
+  </div>
+<% end %>
+
 <% deadlines.each do |deadline| %>
   <article>
     <h3>
@@ -12,3 +44,4 @@
     <p>There are <%= deadline.open_issues %> open issues and <%= deadline.closed_issues %> closed issues, so it's <%= deadline.completion_percentage %>% complete.</p>
   </article>
 <% end %>
+
