--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,11 @@
 // ----------------------------------------------------------------------------
 // Variables
 // ----------------------------------------------------------------------------
+
+$nprogress-color: #0088ee;
+/*$nprogress-height: 10px;*/
+/*$nprogress-zindex: 10100;*/
+
 $input_mono_narrow_bold: "input_mono_narrow_bold", monospace;
 $fonts_url_fallback: 'fonts/';
 // $fonts_url: 'http://d2zrsw3u8lkijg.cloudfront.net/fonts/';
@@ -24,6 +29,7 @@ $fonts_url: 'fonts/';
 // ----------------------------------------------------------------------------
 // Imports
 // ----------------------------------------------------------------------------
+@import "nprogress";
 @import "components/*";
 
 .container {
