--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -1,11 +1,11 @@
-<%= simple_form_for @dashboard do |f| %>
-  <%= f.hidden_field :project_identifier, value: @project_identifier %>
+<%= simple_form_for dashboard do |f| %>
+  <%= f.input :project_identifier, disabled: true %>
+
   <%= f.label "Password protect" %>
   <%= check_box_tag "Password protect" %>
-  <%= f.input "password" %>
-  <%= f.label "Show tasks" %>
-  <%= f.check_box :show_tasks %>
-  <%= f.label "Publish" %>
-  <%= f.check_box :published %>
-  <%= f.button :submit %>
+  <%= f.input :password %>
+  <%= f.input :show_tasks %>
+  <%= f.input :published %>
+
+  <%= f.submit %>
 <% end %>
