project_identifier => project_uid, and added missing validations

--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for dashboard do |f| %>
-  <%= f.input :project_identifier, disabled: true %>
+  <%= f.input :project_uid, disabled: true %>
 
   <%= f.label "Password protect" %>
   <%= check_box_tag "Password protect" %>
