--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -31,17 +31,33 @@
   </div>
 <% end %>
 
-<% deadlines.each do |deadline| %>
-  <article>
-    <h3>
-      <%= link_to deadline.name, deadline_path(project_id: project.full_name, id: deadline.number) %>
-    </h3>
-    <p>State: <%= deadline.state %></p>
-    <% if deadline.due_on %>
-      <p>Is due on <strong><%= deadline.due_on.to_formatted_s(:long) %></strong></p>
-      <p>Which is <strong><%= ago_or_from_now(deadline.due_on) %></strong></p>
+<div class="milestones-wrapper">
+  <ul class="milestones">
+    <% deadlines.each do |deadline| %>
+      <li class="milestone">
+        <%= link_to deadline_path(project_id: project.full_name, id: deadline.number) do %>
+          <h3 class="milestone-name"><%= deadline.name %></h3>
+          <ul class="milestone-countdown js-countdown-big" data-epoch-seconds="<%= deadline.due_on.to_i %>">
+            <li class="milestone-interval">
+              <div class="milestone-number js-countdown-days">00</div>
+              <div class="milestone-label">days</div>
+            </li>
+            <li class="milestone-interval">
+              <div class="milestone-number js-countdown-hours">00</div>
+              <div class="milestone-label">hours</div>
+            </li>
+            <li class="milestone-interval">
+              <div class="milestone-number js-countdown-minutes">01</div>
+              <div class="milestone-label">mins</div>
+            </li>
+          </ul>
+          <div class="milestone-progress"><%= deadline.completion_percentage.round %>%</div>
+          <div class="milestone-issues">
+            <strong><%= deadline.open_issues %></strong> open,
+            <strong><%= deadline.closed_issues %></strong> closed
+          </div>
+        <% end %>
+      </li>
     <% end %>
-    <p>There are <%= deadline.open_issues %> open issues and <%= deadline.closed_issues %> closed issues, so it's <%= deadline.completion_percentage %>% complete.</p>
-  </article>
-<% end %>
-
+  </ul>
+</div>
